--- a/fashion-blog/index.html
+++ b/fashion-blog/index.html
@@ -3,51 +3,70 @@
 
 <head>
     <title>Everyday with Isa</title>
+    <link rel="stylesheet" type="text/css" href="stylesheet.css" />
 </head>
 
 <body>
-    <container>
-    <h1>Sue Fashion</h1>
+    <div class="container">
+        <header>
+            <div class="logo">
+                <h1>Sue Fashion </h1>
+            </div>
+            <div class="menu">
+                <ul>
+                    <li>Home</li>
+                    <li>About </li>
+                    <li>Contact</li>
+                </ul>
+            </div>
+        </header>
+        <div>
+            <h1><Strong>Make Fashion your priority!!!</strong></h1>
 
-    <a href="#contact"> <img
-            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSuOKwd5zY0ZNpz7lQjDKgnqI5p9Jh_BSFW9ymQe1OgoG5pq2xulw" /></a>
+            <a href="#contact"> <img
+                    src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSuOKwd5zY0ZNpz7lQjDKgnqI5p9Jh_BSFW9ymQe1OgoG5pq2xulw" /></a>
 
-    <h3> by Sussie | 1 day ago</h3>
+            <h3> by Sussie | 1 day ago</h3>
 
-    <h1> A Fashion insight</h1>
-    <p><a href="https://en.wikipedia.org/wiki/New_York_Fashion_Week." target="_blank">Fashion Week</a> can be both
-        amazingly fun & incredibly overwhelming, especially if youve never been. Luckily, Im here to give you an
-        insiders guide and make your first show a pleasurable experience. By taking my tips and tricks, and following
-        your gut, youll have an unforgettable experience!</p>
-    <h2>Shows of the Week</h2>
-    <div>
+            <h1> A Fashion insight</h1>
+            <p><a href="https://en.wikipedia.org/wiki/New_York_Fashion_Week." target="_blank">Fashion Week</a> can be
+                both
+                amazingly fun & incredibly overwhelming, especially if youve never been. Luckily, Im here to give you an
+                insiders guide and make your first show a pleasurable experience. By taking my tips and tricks, and
+                following
+                your gut, youll have an unforgettable experience!</p>
+        </div>
+
+        <div>
+            <h2>Shows of the Week</h2>
+            <img
+                src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRalqbaXNwFn2KuJOBEY4353jbw9sF3O7r58YYnWtzAIlyPHLo3" />
+            <p>You can get interesting insight about trending fashion, prices and seasonal outfit.</p>
+            <h2>Dressing for the Shows</h2>
+        </div>
+        <div>
+            <img
+                src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcShxHXC2fEX9k1BGlSly-pctN7fmgITWNKRORvhjJpsVDifKehRhQ" />
+            <p>Always be true to your own sense of style, if you dont youll be uncomfortable the whole time and it will
+                show. Remember, NYFW is about expressing yourself and taking in what the designers have chosen to
+                express
+                through their new lines. Also its important to wear shoes youll be comfortable in all day. Obviously you
+                want to look good, but youll be on your feet all day long, so be prepared.</p>
+            <h4>Related Content</h4>
+        </div>
+        <ul>
+            <li>How stay in shap</li>
+            <li>When Print looks good on you </li>
+            <li>The Overalls Trend</li>
+            <li>Summer oufits for kids</li>
+        </ul>
         <img
-            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRalqbaXNwFn2KuJOBEY4353jbw9sF3O7r58YYnWtzAIlyPHLo3" />
-        <p>You can get interesting insight about trending fashion, prices and seasonal outfit.</p>
-        <h2>Dressing for the Shows</h2>
+            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQM0GEAbtl5PS1x3Gnv6awjCHka2tiw0D0fek1_9gVNGOrKDLQR" />
+        <div id='contact'>
+            <p> <strong>email</strong>: isa@fashionblog.com |<strong>phone</strong>: 917-555-1098 |
+                <strong>address</strong>: 371 284th St, New York, NY, 10001</p>
+        </div>
     </div>
-    <div>
-        <img
-            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcShxHXC2fEX9k1BGlSly-pctN7fmgITWNKRORvhjJpsVDifKehRhQ" />
-        <p>Always be true to your own sense of style, if you dont youll be uncomfortable the whole time and it will
-            show. Remember, NYFW is about expressing yourself and taking in what the designers have chosen to express
-            through their new lines. Also its important to wear shoes youll be comfortable in all day. Obviously you
-            want to look good, but youll be on your feet all day long, so be prepared.</p>
-        <h4>Related Content</h4>
-    </div>
-    <ul>
-        <li>How stay in shap</li>
-        <li>When Print looks good on you </li>
-        <li>The Overalls Trend</li>
-        <li>Summer oufits for kids</li>
-    </ul>
-    <img
-        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQM0GEAbtl5PS1x3Gnv6awjCHka2tiw0D0fek1_9gVNGOrKDLQR" />
-    <div id='contact'>
-        <p> <strong>email</strong>: isa@fashionblog.com |<strong>phone</strong>: 917-555-1098 |
-            <strong>address</strong>: 371 284th St, New York, NY, 10001</p>
-    </div>
-    </container>
 </body>
 
 </html>
