--- a/fashion-blog/index.html
+++ b/fashion-blog/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Everyday with Isa</title>
+    <title>Everyday with Sue</title>
     <link rel="stylesheet" type="text/css" href="stylesheet.css" />
 </head>
 
@@ -63,8 +63,8 @@
         <img
             src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQM0GEAbtl5PS1x3Gnv6awjCHka2tiw0D0fek1_9gVNGOrKDLQR" />
         <div id='contact'>
-            <p> <strong>email</strong>: isa@fashionblog.com |<strong>phone</strong>: 917-555-1098 |
-                <strong>address</strong>: 371 284th St, New York, NY, 10001</p>
+            <p> <strong>email</strong>: ejakhaegbe.ehinomen@gmail.con |<strong>phone</strong>: 587 889 ---- |
+                <strong>address</strong>: Calgary, NW </p>
         </div>
     </div>
 </body>
